Got Official LUA 5.3 working.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,6 @@ project(Standalone)
 set(CMAKE_CXX_STANDARD 17)
 
 include_directories(/usr/include/lua5.3/)
-set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -lSDL2 -lGLEW -lGLU -lGL -Wall")
+set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y -lSDL2 -lGLEW -lGLU -lGL -llua5.3 -Wall")
 
 add_executable(Standalone main.cpp Enums.h Unit.cpp Unit.h Ability.cpp Ability.h Modifier.cpp Modifier.h Item.cpp Item.h Game.cpp Game.h AppConfiguration.h)
